# TheLastSignal

./: .gitignore  PRIVACY.md  README.md  STORE_LISTING.md  STORY_BIBLE.md  SUBMISSION.md  index.html  package-lock.json  package.json
.github/workflows/: pages.yml
docs/: index.html  privacy.html
live/: game.js  index.html
live/css/: main.css  mc.css
live/legacy/stations/: aurora7.js  meridian.js  pinnacle.js
live/mc/: act1.js  act2.js  act3.js  config.js  crew.js  engine.js  images.js  net.js
live/stations/: aurora7.js  helix.js  trident.js
server/: Dockerfile  fly.toml  package-lock.json  package.json  relay.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tools/: asc_provision_ios.py  fetch_nasa.py  upload_ios.sh
